# mageboard

./: .gitignore  CHANGELOG.md  Main.hs  README.md  hprojekt.cabal  mageboard.cabal  schema.sql
.github/workflows/: haskell.yml
Imageboard/: Actions.hs  Database.hs  FileUpload.hs  Markup.hs  Pages.hs  Types.hs
Imageboard/Markup/: PCRE2.hs
lib/Regex/: PCRE2.hs
src/: Main.hs
src/Imageboard/: Actions.hs  Auth.hs  Config.hs  Database.hs  FileUpload.hs  Markup.hs  Pages.hs  Types.hs  Utils.hs
src/Imageboard/Actions/: Admin.hs  Auth.hs  Common.hs  Display.hs  Moderation.hs  Posting.hs
src/Imageboard/Pages/: Account.hs  Catalog.hs  Common.hs  Recent.hs  Thread.hs
src/Regex/: PCRE2.hs
static/: board.css
static/styles/: global.css  jungle.css  roller.css
tests/: Tests.hs
