cabal-version:       >=1.10
name:                mageboard
version:             0.1.0.0
synopsis:            A simple imageboard
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              kt0d
maintainer:          kt0d@proton.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

executable mageboard
  main-is:             Main.hs
  other-modules:
    Imageboard.Config
    Imageboard.Actions.Admin
    Imageboard.Actions.Auth
    Imageboard.Actions.Posting
    Imageboard.Actions.Moderation
    Imageboard.Actions
    Imageboard.Utils
    Imageboard.Pages
    Imageboard.Pages.Common
    Imageboard.Pages.Thread
    Imageboard.Pages.Catalog
    Imageboard.Pages.Recent
    Imageboard.Pages.Account
    Imageboard.Database
    Imageboard.Types
    Imageboard.Markup
    Imageboard.FileUpload
    Regex.PCRE2
  -- other-extensions:
  hs-source-dirs:  src
  build-depends:       
    base >=4.10,
    mtl,
    text,
    bytestring,
    base64-bytestring,
    blaze-html,
    sqlite-simple,
    direct-sqlite,
    scotty,
    scotty-cookie,
    process,
    time,
    wai-extra,
    wai-middleware-static,
    hs-captcha,
    http-types,
    cryptonite,
    password

  default-language:    Haskell2010
  GHC-options:         -Wall -debug -dcore-lint -threaded
  extra-libraries:     pcre2-16

