cabal-version:       >=1.10
name:                mageboard
version:             0.1.0.0
synopsis:            A simple imageboard
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              kt0d
maintainer:          kt0d@proton.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

executable mageboard
  main-is:             Main.hs
  other-modules:
    Imageboard.Config
    Imageboard.Actions.Display
    Imageboard.Actions.Admin
    Imageboard.Actions.Auth
    Imageboard.Actions.Posting
    Imageboard.Actions.Moderation
    Imageboard.Actions
    Imageboard.Utils
    Imageboard.Pages
    Imageboard.Pages.Common
    Imageboard.Pages.Thread
    Imageboard.Pages.Catalog
    Imageboard.Pages.Recent
    Imageboard.Pages.Account
    Imageboard.Database
    Imageboard.Types
    Imageboard.Markup
    Imageboard.FileUpload
    Regex.PCRE2
  -- other-extensions:
  hs-source-dirs:  src
  build-depends:       
    base                  >= 4.13.0 && < 4.15,
    directory             >= 1.3.6.0 && < 1.4,
    base64-bytestring     >= 1.1.0 && < 1.2,
    bytestring            >= 0.10.10 && < 0.11,
    blaze-html            >= 0.9.1 && < 0.10,
    text                  >= 1.2.4 && < 1.3,
    cryptonite            >= 0.26 && < 0.27,
    direct-sqlite         >= 2.3.26 && < 2.4,
    hs-captcha            >= 1.0 && < 1.1,
    time                  >= 1.9.3 && < 1.10,
    http-types            >= 0.12.3 && < 0.13,
    mtl                   >= 2.2.2 && < 2.3,
    password              >= 2.0.1 && < 2.1,
    process               >= 1.6.8 && < 1.7,
    scotty                >= 0.12 && < 0.13,
    wai-extra             >= 3.0.29 && < 3.1,
    scotty-cookie         >= 0.1.0 && < 0.2,
    sqlite-simple         >= 0.4.18 && < 0.5,
    wai-middleware-static >= 0.8.3 && < 0.9

  default-language:    Haskell2010
  GHC-options:         -Wall -debug -dcore-lint -threaded
  extra-libraries:     pcre2-16

