cabal-version:       >=1.10
name:                mageboard
version:             0.1.0.0
synopsis:            A simple imageboard
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              kt0d
maintainer:          kt0d@proton.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

library mageboard-lib
  hs-source-dirs:  lib
  exposed-modules:
    Regex.PCRE2
  build-depends:       
    base                  >= 4.13.0 && < 5,
    text                  >= 2,
    array
  default-language:    Haskell2010
  GHC-options:         -Wall -debug -dcore-lint -threaded
  extra-libraries:     pcre2-8

executable mageboard
  main-is:             Main.hs
  hs-source-dirs:  src
  other-modules:
    Imageboard.Config
    Imageboard.Actions.Display
    Imageboard.Actions.Admin
    Imageboard.Actions.Auth
    Imageboard.Actions.Posting
    Imageboard.Actions.Moderation
    Imageboard.Actions
    Imageboard.Actions.Common
    Imageboard.Pages
    Imageboard.Pages.Common
    Imageboard.Pages.Thread
    Imageboard.Pages.Catalog
    Imageboard.Pages.Recent
    Imageboard.Pages.Account
    Imageboard.Database
    Imageboard.Types
    Imageboard.Markup
    Imageboard.FileUpload
  build-depends:       
    mageboard-lib,
    base                  >= 4.13.0 && < 5,
    directory             >= 1.3 && < 1.4,
    base64-bytestring     >= 1.1,
    bytestring            >= 0.10,
    blaze-html            >= 0.9,
    text                  >= 1.2,
    cryptonite            >= 0.26,
    direct-sqlite         >= 2.3,
    hs-captcha            >= 1.0 && < 1.1,
    time                  >= 1.9,
    http-types            >= 0.12,
    mtl                   >= 2.2 && < 2.3,
    password              >= 3 && < 4,
    process               >= 1.6,
    scotty                >= 0.12,
    wai-extra             >= 3.1,
    scotty-cookie         >= 0.1,
    sqlite-simple         >= 0.4,
    wai-middleware-static >= 0.9 && <= 0.10,
    array,
    containers
  default-language:    Haskell2010
  GHC-options:         -Wall -debug -dcore-lint -threaded

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
  hs-source-dirs:
    tests
  build-depends:
    mageboard-lib,
    HUnit,
    base,
    text
  default-language:    Haskell2010
  ghc-options: -Wall
